Fix the width on the /challenges cards not fitting the screen

--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -21,6 +21,7 @@
 }
 
 .challenge-card {
+	width: 99%;
 }
 
 .card-details {
